# evgOpencvUtilities

./: .gitignore  CMakeLists.txt  angles3D.cpp  angles3D.h  geometry3D.cpp  geometry3D.h  makefile  mediaLoadSave.cpp  mediaLoadSave.h  miscellaneous.h  readme.txt
evgOpencvUtilities.xcodeproj/: project.pbxproj
evgOpencvUtilities.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
include/: featuresIO.h  geometry3D.h  mediaIO.h  miscellaneous.h
matchImages/: matchImages.cpp
src/: angles3D.cpp  angles3D.h  featuresIO.cpp  geometry3D.cpp  geometry3D.h  matchImages.cpp  mediaIO.cpp  mediaIO.h  multiview.cpp  multiview.h  undistortImage.cpp
test/: featuresIO_test.cpp  multiview_test.cpp  test_featuresIO.cpp
test/ioTestData/: ubc_good.txt  ubc_write_got.txt  vlfeat_good.txt  vlfeat_write_got.txt
test/multiviewData/: matches123-clear.txt  matches23-clear.txt  matches23-noisy.txt  matches31-noisy.txt  pose2.txt  pose3.txt
test/multiviewData/degenerate/: matches123-clear.txt  matches123-noisy.txt  pose3.txt
test/multiviewData/general/: matches12-clear.txt  matches12-noisy.txt  matches123-clear.txt  matches123-noisy.txt  matches23-clear.txt  matches23-noisy.txt  matches31-clear.txt  matches31-noisy.txt  pose2-noisy.txt  pose3-noisy.txt
test/scripts/: degenerateMultiviewData.m  generateMultiviewData.m
test/utilTrySiftFormat/: 0.pgm  1.pgm  1.sift  2.pgm  parseBin  parseBin.cpp  readme.txt  tryEndianness  tryEndianness.cpp  tryEndianness.txt  tryEndiannessRead
undistortVideo/: undistortVideo.cpp
